--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,9 @@
       <a href="/assign_seats" title="Asignar asientos" class="p-2 rounded-md hover:bg-indigo-50">
         <i data-lucide="layout-grid" class="w-5 h-5 [stroke-width:2.25]"></i>
       </a>
+      <a href="/quick_scan" title="Escaneo rápido" class="p-2 rounded-md hover:bg-indigo-50">
+        <i data-lucide="scan" class="w-5 h-5 [stroke-width:2.25]"></i>
+      </a>
     </nav>
   </aside>
 
@@ -78,6 +81,11 @@
       Asignar asientos
     </span>
   </a>
+    <a href="/quick_scan" class="flex h-10 items-center rounded-lg px-3 hover:bg-indigo-50">
+      <span class="label leading-none font-semibold opacity-0 -translate-x-2 transition-all duration-300">
+        Escaneo rápido
+      </span>
+    </a>
 </nav>
 
 <!-- Marca al pie -->
